# ComfyUI-RED-Step1X-Edit

./: .gitignore  LICENSE  README.md  README_CN.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: RED-step1x_edit (16G).json  step1x_edit.json  step1x_edit_teacache.json
modules/: attention.py  conditioner.py  layers.py  model_edit.py  model_edit_teacache.py
nodes/: __init__.py  step1x_edit_nodes.py  step1x_edit_teacache_nodes.py
utils/: __init__.py  get_flash_attn.py  model_loader.py  model_loader_teacache.py  step1x_edit_utils.py  teacache.py
