[project]
name = "step1x-edit"
description = "This custom node integrates the [a/Step1X-Edit](https://github.com/stepfun-ai/Step1X-Edit) image editing model into ComfyUI. Step1X-Edit is a state-of-the-art image editing model that processes a reference image and user's editing instruction to generate a new image."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch>=2.3.1", "liger_kernel>=0.5.4", "einops>=0.8.1", "transformers>=4.49.0", "qwen_vl_utils>=0.0.10", "safetensors>=0.4.5", "pillow>=11.1.0"]

[project.urls]
Repository = "https://github.com/raykindle/ComfyUI_Step1X-Edit"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Step1X-Edit"
Icon = ""
